/**
 * Copyright 2013-2026 the original author or authors from the JHipster project.
 *
 * This file is part of the JHipster project, see https://www.jhipster.tech/
 * for more information.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
import { before, describe, expect, it } from 'esmocha';
import { basename } from 'node:path';

import { defaultHelpers as helpers, runResult } from '../../lib/testing/index.ts';
import { shouldSupportFeatures, testBlueprintSupport } from '../../test/support/tests.ts';

import Generator from './index.ts';

const generator = basename(import.meta.dirname);

const mockedGenerators = ['jhipster:init'];

describe(`generator - ${generator}`, () => {
  shouldSupportFeatures(Generator);
  describe('blueprint support', () => testBlueprintSupport(generator));

  describe('with', () => {
    describe('default config', () => {
      before(async () => {
        await helpers.runJHipster(generator).withJHipsterConfig().withMockedGenerators(mockedGenerators);
      });
      it('should compose with init generator', () => {
        runResult.assertGeneratorComposedOnce('jhipster:init');
      });
      it('should write files and match snapshot', () => {
        expect(runResult.getStateSnapshot()).toMatchSnapshot();
      });
      it('should match application snapshot', () => {
        const application = runResult.application;
        expect(application).toMatchSnapshot({
          jhipsterPackageJson: expect.any(Object),
        });
      });
    });
    describe('all option', () => {
      before(async () => {
        await helpers.runJHipster(generator).withOptions({ allGenerators: true }).withMockedGenerators(mockedGenerators);
      });
      it('should compose with init generator', () => {
        runResult.assertGeneratorComposedOnce('jhipster:init');
      });
      it('should match snapshot', () => {
        expect(runResult.getStateSnapshot()).toMatchSnapshot();
      });
      it('should match application snapshot', () => {
        const application = runResult.application;
        expect(application).toMatchSnapshot({
          jhipsterPackageJson: expect.any(Object),
          generators: expect.any(Object),
          subGenerators: expect.any(Array),
        });
      });
    });
    describe('local-blueprint option', () => {
      before(async () => {
        await helpers.runJHipster(generator).withOptions({ localBlueprint: true }).withMockedGenerators(mockedGenerators);
      });
      it('should not compose with init generator', () => {
        runResult.assertGeneratorNotComposed('jhipster:init');
      });
      it('should match snapshot', () => {
        expect(runResult.getStateSnapshot()).toMatchInlineSnapshot(`
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
}
`);
      });
      it('should match application snapshot', () => {
        const application = runResult.application;
        expect(application).toMatchSnapshot({
          jhipsterPackageJson: expect.any(Object),
        });
      });
    });
    describe('local-blueprint option and app generator', () => {
      before(async () => {
        await helpers
          .runJHipster(generator)
          .withOptions({ localBlueprint: true, subGenerators: ['app'], allPriorities: true })
          .withMockedGenerators(mockedGenerators);
      });
      it('should not compose with init generator', () => {
        runResult.assertGeneratorNotComposed('jhipster:init');
      });
      it('should write java files with gradle build tool and match snapshot', () => {
        expect(runResult.getStateSnapshot()).toMatchInlineSnapshot(`
{
  ".blueprint/app/command.ts": {
    "stateCleared": "modified",
  },
  ".blueprint/app/generator.ts": {
    "stateCleared": "modified",
  },
  ".blueprint/app/index.ts": {
    "stateCleared": "modified",
  },
  ".blueprint/app/templates/template-file-app.ejs": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
}
`);
      });
      it('should match application snapshot', () => {
        const application = runResult.application;
        expect(application).toMatchSnapshot({
          jhipsterPackageJson: expect.any(Object),
        });
      });
    });
  });
});
