// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generator - generate-blueprint with all option should match application snapshot 1`] = `
{
  "additionalSubGenerators": "",
  "artifactoryReleasesId": "releases",
  "artifactoryReleasesUrl": "http://artifactory:8081/artifactory/libs-release",
  "artifactorySnapshotsId": "snapshots",
  "artifactorySnapshotsUrl": "http://artifactory:8081/artifactory/libs-snapshot",
  "backendType": "Java",
  "backendTypeJavaAny": true,
  "backendTypeSpringBoot": true,
  "baseName": "jhipster",
  "blueprintCliName": "cli.cts",
  "blueprintMjsExtension": "js",
  "blueprintsPath": "generators/",
  "buildTool": "maven",
  "buildToolAny": true,
  "buildToolGradle": false,
  "buildToolMaven": true,
  "camelizedBaseName": "jhipster",
  "capitalizedBaseName": "Jhipster",
  "caret": undefined,
  "ciCd": undefined,
  "ciCdAzure": false,
  "ciCdCircle": false,
  "ciCdGithub": false,
  "ciCdGitlab": false,
  "ciCdIntegrations": [],
  "ciCdIntegrationsCypressDashboard": false,
  "ciCdIntegrationsDeploy": false,
  "ciCdIntegrationsHeroku": false,
  "ciCdIntegrationsPublishDocker": false,
  "ciCdIntegrationsSnyk": false,
  "ciCdIntegrationsSonar": false,
  "ciCdJenkins": false,
  "ciCdTravis": false,
  "cli": true,
  "cliName": "jhipster-jhipster",
  "clientDistDir": "dist/",
  "clientPackageJsonScripts": {},
  "clientRootDir": "",
  "clientSrcDir": "src/main/webapp/",
  "clientTestDir": "src/test/javascript/",
  "commandName": "generate-blueprint",
  "commands": [],
  "creationTimestamp": undefined,
  "customizeTemplatePaths": [],
  "dasherizedBaseName": "jhipster",
  "defaultCommand": "generate-blueprint",
  "dockerImage": undefined,
  "documentationArchiveUrl": "https://www.jhipster.tech/documentation-archive/vJHIPSTER_VERSION",
  "dynamic": false,
  "generators": Any<Object>,
  "gitDependency": undefined,
  "githubActions": {
    "actions/checkout": "actions/checkout@VERSION",
    "actions/setup-java": "actions/setup-java@VERSION",
    "actions/setup-node": "actions/setup-node@VERSION",
    "actions/upload-artifact": "actions/upload-artifact@VERSION",
    "jhipster/actions/cache-npm-dependencies": "jhipster/actions/cache-npm-dependencies@VERSION",
    "jhipster/actions/compare-sample": "jhipster/actions/compare-sample@VERSION",
    "jhipster/actions/restore-cache": "jhipster/actions/restore-cache@VERSION",
    "jhipster/actions/save-cache": "jhipster/actions/save-cache@VERSION",
    "jhipster/actions/setup-runner": "jhipster/actions/setup-runner@VERSION",
    "jwalton/gh-docker-logs": "jwalton/gh-docker-logs@VERSION",
  },
  "githubRepository": "jhipster/generator-jhipster-jhipster",
  "githubWorkflows": undefined,
  "herokuAppName": "jhipster",
  "hipster": "jhipster_family_member_3",
  "hipsterBugTrackerLink": "https://github.com/jhipster/generator-jhipster/issues?state=open",
  "hipsterBugTrackerProductName": "JHipster",
  "hipsterChatLink": "https://gitter.im/jhipster/generator-jhipster",
  "hipsterChatProductName": "JHipster",
  "hipsterDocumentationLink": "https://www.jhipster.tech/",
  "hipsterHomePageProductName": "JHipster",
  "hipsterName": "Java Hipster",
  "hipsterProductName": "JHipster",
  "hipsterProjectLink": "https://github.com/jhipster/generator-jhipster",
  "hipsterStackOverflowProductName": "JHipster",
  "hipsterStackoverflowLink": "https://stackoverflow.com/tags/jhipster/info",
  "hipsterTwitterLink": "https://twitter.com/jhipster",
  "hipsterTwitterUsername": "@jhipster",
  "humanizedBaseName": "JHipster",
  "ignoreExistingGenerators": undefined,
  "insideDocker": undefined,
  "javascriptBlueprint": false,
  "jhiPrefix": "jhi",
  "jhiPrefixCapitalized": "Jhi",
  "jhiPrefixDashed": "jhi",
  "jhipsterPackageJson": Any<Object>,
  "jhipsterVersion": "JHIPSTER_VERSION",
  "js": true,
  "localBlueprint": false,
  "lowercaseBaseName": "jhipster",
  "monorepository": undefined,
  "nodeDependencies": {
    "concurrently": "CONCURRENTLY_VERSION",
    "eslint-config-prettier": "ESLINT_CONFIG_PRETTIER_VERSION",
    "eslint-plugin-prettier": "ESLINT_PLUGIN_PRETTIER_VERSION",
    "husky": "HUSKY_VERSION",
    "lint-staged": "LINT_STAGED_VERSION",
    "npm": "NPM_VERSION",
    "prettier": "PRETTIER_VERSION",
    "prettier-plugin-java": "PRETTIER_PLUGIN_JAVA_VERSION",
    "prettier-plugin-packagejson": "PRETTIER_PLUGIN_PACKAGEJSON_VERSION",
    "wait-on": "WAIT_ON_VERSION",
  },
  "nodePackageManager": "npm",
  "nodePackageManagerCommand": "npm",
  "nodeVersion": "NODE_VERSION",
  "packageJsonNodeEngine": undefined,
  "packageJsonScripts": {},
  "prettierExtensions": [
    "md",
    "json",
    "yml",
    "js",
    "cjs",
    "mjs",
    "ts",
    "cts",
    "mts",
  ],
  "prettierFolders": [
    "",
    ".blueprint/**/",
  ],
  "prettierTabWidth": 2,
  "projectDescription": "Description for JHipster",
  "sampleWritten": undefined,
  "sendBuildToGitlab": undefined,
  "skipCommitHook": undefined,
  "skipJhipsterDependencies": undefined,
  "skipWorkflows": undefined,
  "sonarName": "sonar",
  "sonarOrga": undefined,
  "sonarUrl": "https://sonarcloud.io",
  "subGenerators": Any<Array>,
  "temporaryDir": "temp/",
  "typescriptEslint": true,
  "upperFirstCamelCaseBaseName": "Jhipster",
}
`;

exports[`generator - generate-blueprint with all option should match snapshot 1`] = `
{
  ".blueprint/cli/commands.ts": {
    "stateCleared": "modified",
  },
  ".blueprint/generate-sample/command.ts": {
    "stateCleared": "modified",
  },
  ".blueprint/generate-sample/generator.ts": {
    "stateCleared": "modified",
  },
  ".blueprint/generate-sample/index.ts": {
    "stateCleared": "modified",
  },
  ".blueprint/generate-sample/templates/samples/sample.jdl": {
    "stateCleared": "modified",
  },
  ".github/workflows/generator.yml": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "README.md": {
    "stateCleared": "modified",
  },
  "cli/cli-customizations.cts": {
    "stateCleared": "modified",
  },
  "cli/cli.cts": {
    "stateCleared": "modified",
  },
  "generators/angular/command.ts": {
    "stateCleared": "modified",
  },
  "generators/angular/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/angular/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/angular/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/angular/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/angular/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/angular/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/angular/generators/bootstrap/templates/template-file-angular:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/angular/index.ts": {
    "stateCleared": "modified",
  },
  "generators/angular/templates/template-file-angular.ejs": {
    "stateCleared": "modified",
  },
  "generators/app/command.ts": {
    "stateCleared": "modified",
  },
  "generators/app/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/app/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/app/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/app/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/app/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/app/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/app/generators/bootstrap/templates/template-file-app:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/app/index.ts": {
    "stateCleared": "modified",
  },
  "generators/app/templates/template-file-app.ejs": {
    "stateCleared": "modified",
  },
  "generators/base-application/command.ts": {
    "stateCleared": "modified",
  },
  "generators/base-application/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/base-application/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/base-application/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/base-application/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/base-application/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/base-application/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/base-application/generators/bootstrap/templates/template-file-base-application:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/base-application/index.ts": {
    "stateCleared": "modified",
  },
  "generators/base-application/templates/template-file-base-application.ejs": {
    "stateCleared": "modified",
  },
  "generators/base-core/command.ts": {
    "stateCleared": "modified",
  },
  "generators/base-core/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/base-core/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/base-core/index.ts": {
    "stateCleared": "modified",
  },
  "generators/base-core/templates/template-file-base-core.ejs": {
    "stateCleared": "modified",
  },
  "generators/base-entity-changes/command.ts": {
    "stateCleared": "modified",
  },
  "generators/base-entity-changes/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/base-entity-changes/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/base-entity-changes/index.ts": {
    "stateCleared": "modified",
  },
  "generators/base-entity-changes/templates/template-file-base-entity-changes.ejs": {
    "stateCleared": "modified",
  },
  "generators/base-generator.ts": {
    "stateCleared": "modified",
  },
  "generators/base-simple-application/command.ts": {
    "stateCleared": "modified",
  },
  "generators/base-simple-application/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/base-simple-application/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/base-simple-application/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/base-simple-application/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/base-simple-application/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/base-simple-application/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/base-simple-application/generators/bootstrap/templates/template-file-base-simple-application:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/base-simple-application/index.ts": {
    "stateCleared": "modified",
  },
  "generators/base-simple-application/templates/template-file-base-simple-application.ejs": {
    "stateCleared": "modified",
  },
  "generators/base-workspaces/command.ts": {
    "stateCleared": "modified",
  },
  "generators/base-workspaces/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/base-workspaces/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/base-workspaces/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/base-workspaces/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/base-workspaces/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/base-workspaces/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/base-workspaces/generators/bootstrap/templates/template-file-base-workspaces:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/base-workspaces/index.ts": {
    "stateCleared": "modified",
  },
  "generators/base-workspaces/templates/template-file-base-workspaces.ejs": {
    "stateCleared": "modified",
  },
  "generators/base/command.ts": {
    "stateCleared": "modified",
  },
  "generators/base/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/base/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/base/index.ts": {
    "stateCleared": "modified",
  },
  "generators/base/templates/template-file-base.ejs": {
    "stateCleared": "modified",
  },
  "generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/bootstrap/templates/template-file-bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/command.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/azure/command.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/azure/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/azure/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/azure/index.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/azure/templates/template-file-ci-cd:azure.ejs": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/bootstrap/templates/template-file-ci-cd:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/circle/command.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/circle/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/circle/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/circle/index.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/circle/templates/template-file-ci-cd:circle.ejs": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/github/command.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/github/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/github/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/github/index.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/github/templates/template-file-ci-cd:github.ejs": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/gitlab/command.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/gitlab/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/gitlab/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/gitlab/index.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/gitlab/templates/template-file-ci-cd:gitlab.ejs": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/jenkins/command.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/jenkins/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/jenkins/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/jenkins/index.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/jenkins/templates/template-file-ci-cd:jenkins.ejs": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/travis/command.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/travis/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/travis/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/travis/index.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/generators/travis/templates/template-file-ci-cd:travis.ejs": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/index.ts": {
    "stateCleared": "modified",
  },
  "generators/ci-cd/templates/template-file-ci-cd.ejs": {
    "stateCleared": "modified",
  },
  "generators/client/command.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generators/bootstrap/templates/template-file-client:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/client/generators/common/command.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generators/common/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generators/common/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generators/common/index.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generators/common/templates/template-file-client:common.ejs": {
    "stateCleared": "modified",
  },
  "generators/client/generators/encode-csrf-token/command.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generators/encode-csrf-token/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generators/encode-csrf-token/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generators/encode-csrf-token/index.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generators/encode-csrf-token/templates/template-file-client:encode-csrf-token.ejs": {
    "stateCleared": "modified",
  },
  "generators/client/generators/i18n/command.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generators/i18n/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generators/i18n/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generators/i18n/index.ts": {
    "stateCleared": "modified",
  },
  "generators/client/generators/i18n/templates/template-file-client:i18n.ejs": {
    "stateCleared": "modified",
  },
  "generators/client/index.ts": {
    "stateCleared": "modified",
  },
  "generators/client/templates/template-file-client.ejs": {
    "stateCleared": "modified",
  },
  "generators/common/command.ts": {
    "stateCleared": "modified",
  },
  "generators/common/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/common/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/common/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/common/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/common/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/common/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/common/generators/bootstrap/templates/template-file-common:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/common/index.ts": {
    "stateCleared": "modified",
  },
  "generators/common/templates/template-file-common.ejs": {
    "stateCleared": "modified",
  },
  "generators/cypress/command.ts": {
    "stateCleared": "modified",
  },
  "generators/cypress/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/cypress/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/cypress/index.ts": {
    "stateCleared": "modified",
  },
  "generators/cypress/templates/template-file-cypress.ejs": {
    "stateCleared": "modified",
  },
  "generators/docker-compose/command.ts": {
    "stateCleared": "modified",
  },
  "generators/docker-compose/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/docker-compose/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/docker-compose/index.ts": {
    "stateCleared": "modified",
  },
  "generators/docker-compose/templates/template-file-docker-compose.ejs": {
    "stateCleared": "modified",
  },
  "generators/docker/command.ts": {
    "stateCleared": "modified",
  },
  "generators/docker/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/docker/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/docker/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/docker/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/docker/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/docker/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/docker/generators/bootstrap/templates/template-file-docker:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/docker/index.ts": {
    "stateCleared": "modified",
  },
  "generators/docker/templates/template-file-docker.ejs": {
    "stateCleared": "modified",
  },
  "generators/entities/command.ts": {
    "stateCleared": "modified",
  },
  "generators/entities/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/entities/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/entities/index.ts": {
    "stateCleared": "modified",
  },
  "generators/entities/templates/template-file-entities.ejs": {
    "stateCleared": "modified",
  },
  "generators/entity/command.ts": {
    "stateCleared": "modified",
  },
  "generators/entity/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/entity/index.ts": {
    "stateCleared": "modified",
  },
  "generators/entity/templates/template-file-entity.ejs": {
    "stateCleared": "modified",
  },
  "generators/export-jdl/command.ts": {
    "stateCleared": "modified",
  },
  "generators/export-jdl/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/export-jdl/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/export-jdl/index.ts": {
    "stateCleared": "modified",
  },
  "generators/export-jdl/templates/template-file-export-jdl.ejs": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/command.ts": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/generators/bootstrap/templates/template-file-generate-blueprint:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/generators/local/command.ts": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/generators/local/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/generators/local/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/generators/local/index.ts": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/generators/local/templates/template-file-generate-blueprint:local.ejs": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/generators/standalone/command.ts": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/generators/standalone/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/generators/standalone/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/generators/standalone/index.ts": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/generators/standalone/templates/template-file-generate-blueprint:standalone.ejs": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/index.ts": {
    "stateCleared": "modified",
  },
  "generators/generate-blueprint/templates/template-file-generate-blueprint.ejs": {
    "stateCleared": "modified",
  },
  "generators/git/command.ts": {
    "stateCleared": "modified",
  },
  "generators/git/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/git/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/git/index.ts": {
    "stateCleared": "modified",
  },
  "generators/git/templates/template-file-git.ejs": {
    "stateCleared": "modified",
  },
  "generators/heroku/command.ts": {
    "stateCleared": "modified",
  },
  "generators/heroku/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/heroku/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/heroku/index.ts": {
    "stateCleared": "modified",
  },
  "generators/heroku/templates/template-file-heroku.ejs": {
    "stateCleared": "modified",
  },
  "generators/info/command.ts": {
    "stateCleared": "modified",
  },
  "generators/info/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/info/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/info/index.ts": {
    "stateCleared": "modified",
  },
  "generators/info/templates/template-file-info.ejs": {
    "stateCleared": "modified",
  },
  "generators/init/command.ts": {
    "stateCleared": "modified",
  },
  "generators/init/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/init/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/init/index.ts": {
    "stateCleared": "modified",
  },
  "generators/init/templates/template-file-init.ejs": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/command.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/bootstrap/templates/template-file-java-simple-application:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/build-tool/command.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/build-tool/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/build-tool/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/build-tool/index.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/build-tool/templates/template-file-java-simple-application:build-tool.ejs": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/code-quality/command.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/code-quality/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/code-quality/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/code-quality/index.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/code-quality/templates/template-file-java-simple-application:code-quality.ejs": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/graalvm/command.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/graalvm/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/graalvm/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/graalvm/index.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/graalvm/templates/template-file-java-simple-application:graalvm.ejs": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/gradle/command.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/gradle/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/gradle/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/gradle/index.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/gradle/templates/template-file-java-simple-application:gradle.ejs": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/jib/command.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/jib/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/jib/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/jib/index.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/jib/templates/template-file-java-simple-application:jib.ejs": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/maven/command.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/maven/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/maven/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/maven/index.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/maven/templates/template-file-java-simple-application:maven.ejs": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/openapi-generator/command.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/openapi-generator/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/openapi-generator/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/openapi-generator/index.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/generators/openapi-generator/templates/template-file-java-simple-application:openapi-generator.ejs": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/index.ts": {
    "stateCleared": "modified",
  },
  "generators/java-simple-application/templates/template-file-java-simple-application.ejs": {
    "stateCleared": "modified",
  },
  "generators/java/command.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/bootstrap/templates/template-file-java:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/java/generators/domain/command.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/domain/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/domain/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/domain/index.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/domain/templates/template-file-java:domain.ejs": {
    "stateCleared": "modified",
  },
  "generators/java/generators/gatling/command.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/gatling/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/gatling/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/gatling/index.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/gatling/templates/template-file-java:gatling.ejs": {
    "stateCleared": "modified",
  },
  "generators/java/generators/i18n/command.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/i18n/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/i18n/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/i18n/index.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/i18n/templates/template-file-java:i18n.ejs": {
    "stateCleared": "modified",
  },
  "generators/java/generators/node/command.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/node/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/node/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/node/index.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/node/templates/template-file-java:node.ejs": {
    "stateCleared": "modified",
  },
  "generators/java/generators/server/command.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/server/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/server/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/server/index.ts": {
    "stateCleared": "modified",
  },
  "generators/java/generators/server/templates/template-file-java:server.ejs": {
    "stateCleared": "modified",
  },
  "generators/java/index.ts": {
    "stateCleared": "modified",
  },
  "generators/java/templates/template-file-java.ejs": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/command.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/bootstrap/templates/template-file-javascript-simple-application:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/eslint/command.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/eslint/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/eslint/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/eslint/index.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/eslint/templates/template-file-javascript-simple-application:eslint.ejs": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/husky/command.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/husky/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/husky/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/husky/index.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/husky/templates/template-file-javascript-simple-application:husky.ejs": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/prettier/command.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/prettier/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/prettier/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/prettier/index.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/generators/prettier/templates/template-file-javascript-simple-application:prettier.ejs": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/index.ts": {
    "stateCleared": "modified",
  },
  "generators/javascript-simple-application/templates/template-file-javascript-simple-application.ejs": {
    "stateCleared": "modified",
  },
  "generators/jdl/command.ts": {
    "stateCleared": "modified",
  },
  "generators/jdl/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/jdl/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/jdl/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/jdl/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/jdl/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/jdl/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/jdl/generators/bootstrap/templates/template-file-jdl:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/jdl/index.ts": {
    "stateCleared": "modified",
  },
  "generators/jdl/templates/template-file-jdl.ejs": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/command.ts": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/generators/bootstrap/templates/template-file-kubernetes:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/generators/helm/command.ts": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/generators/helm/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/generators/helm/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/generators/helm/index.ts": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/generators/helm/templates/template-file-kubernetes:helm.ejs": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/generators/knative/command.ts": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/generators/knative/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/generators/knative/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/generators/knative/index.ts": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/generators/knative/templates/template-file-kubernetes:knative.ejs": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/index.ts": {
    "stateCleared": "modified",
  },
  "generators/kubernetes/templates/template-file-kubernetes.ejs": {
    "stateCleared": "modified",
  },
  "generators/languages/command.ts": {
    "stateCleared": "modified",
  },
  "generators/languages/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/languages/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/languages/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/languages/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/languages/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/languages/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/languages/generators/bootstrap/templates/template-file-languages:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/languages/index.ts": {
    "stateCleared": "modified",
  },
  "generators/languages/templates/template-file-languages.ejs": {
    "stateCleared": "modified",
  },
  "generators/liquibase/command.ts": {
    "stateCleared": "modified",
  },
  "generators/liquibase/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/liquibase/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/liquibase/index.ts": {
    "stateCleared": "modified",
  },
  "generators/liquibase/templates/template-file-liquibase.ejs": {
    "stateCleared": "modified",
  },
  "generators/project-name/command.ts": {
    "stateCleared": "modified",
  },
  "generators/project-name/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/project-name/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/project-name/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/project-name/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/project-name/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/project-name/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/project-name/generators/bootstrap/templates/template-file-project-name:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/project-name/index.ts": {
    "stateCleared": "modified",
  },
  "generators/project-name/templates/template-file-project-name.ejs": {
    "stateCleared": "modified",
  },
  "generators/react/command.ts": {
    "stateCleared": "modified",
  },
  "generators/react/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/react/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/react/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/react/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/react/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/react/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/react/generators/bootstrap/templates/template-file-react:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/react/index.ts": {
    "stateCleared": "modified",
  },
  "generators/react/templates/template-file-react.ejs": {
    "stateCleared": "modified",
  },
  "generators/server/command.ts": {
    "stateCleared": "modified",
  },
  "generators/server/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/server/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/server/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/server/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/server/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/server/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/server/generators/bootstrap/templates/template-file-server:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/server/index.ts": {
    "stateCleared": "modified",
  },
  "generators/server/templates/template-file-server.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/bootstrap/templates/template-file-spring-boot:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/cache/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/cache/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/cache/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/cache/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/cache/templates/template-file-spring-boot:cache.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/cucumber/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/cucumber/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/cucumber/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/cucumber/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/cucumber/templates/template-file-spring-boot:cucumber.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-cassandra/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-cassandra/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-cassandra/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-cassandra/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-cassandra/templates/template-file-spring-boot:data-cassandra.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-couchbase/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-couchbase/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-couchbase/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-couchbase/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-couchbase/templates/template-file-spring-boot:data-couchbase.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-elasticsearch/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-elasticsearch/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-elasticsearch/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-elasticsearch/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-elasticsearch/templates/template-file-spring-boot:data-elasticsearch.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-mongodb/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-mongodb/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-mongodb/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-mongodb/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-mongodb/templates/template-file-spring-boot:data-mongodb.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-neo4j/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-neo4j/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-neo4j/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-neo4j/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-neo4j/templates/template-file-spring-boot:data-neo4j.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-relational/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-relational/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-relational/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-relational/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/data-relational/templates/template-file-spring-boot:data-relational.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/graalvm/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/graalvm/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/graalvm/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/graalvm/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/graalvm/templates/template-file-spring-boot:graalvm.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/jwt/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/jwt/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/jwt/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/jwt/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/jwt/templates/template-file-spring-boot:jwt.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/liquibase/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/liquibase/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/liquibase/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/liquibase/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/liquibase/templates/template-file-spring-boot:liquibase.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/oauth2/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/oauth2/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/oauth2/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/oauth2/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/oauth2/templates/template-file-spring-boot:oauth2.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/websocket/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/websocket/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/websocket/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/websocket/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/generators/websocket/templates/template-file-spring-boot:websocket.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-boot/templates/template-file-spring-boot.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/feign-client/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/feign-client/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/feign-client/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/feign-client/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/feign-client/templates/template-file-spring-cloud:feign-client.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/gateway/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/gateway/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/gateway/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/gateway/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/gateway/templates/template-file-spring-cloud:gateway.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/kafka/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/kafka/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/kafka/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/kafka/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/kafka/templates/template-file-spring-cloud:kafka.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/pulsar/command.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/pulsar/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/pulsar/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/pulsar/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/generators/pulsar/templates/template-file-spring-cloud:pulsar.ejs": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/index.ts": {
    "stateCleared": "modified",
  },
  "generators/spring-cloud/templates/template-file-spring-cloud.ejs": {
    "stateCleared": "modified",
  },
  "generators/upgrade/command.ts": {
    "stateCleared": "modified",
  },
  "generators/upgrade/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/upgrade/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/upgrade/index.ts": {
    "stateCleared": "modified",
  },
  "generators/upgrade/templates/template-file-upgrade.ejs": {
    "stateCleared": "modified",
  },
  "generators/vue/command.ts": {
    "stateCleared": "modified",
  },
  "generators/vue/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/vue/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/vue/generators/bootstrap/command.ts": {
    "stateCleared": "modified",
  },
  "generators/vue/generators/bootstrap/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/vue/generators/bootstrap/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/vue/generators/bootstrap/index.ts": {
    "stateCleared": "modified",
  },
  "generators/vue/generators/bootstrap/templates/template-file-vue:bootstrap.ejs": {
    "stateCleared": "modified",
  },
  "generators/vue/index.ts": {
    "stateCleared": "modified",
  },
  "generators/vue/templates/template-file-vue.ejs": {
    "stateCleared": "modified",
  },
  "generators/workspaces/command.ts": {
    "stateCleared": "modified",
  },
  "generators/workspaces/generator.spec.ts": {
    "stateCleared": "modified",
  },
  "generators/workspaces/generator.ts": {
    "stateCleared": "modified",
  },
  "generators/workspaces/index.ts": {
    "stateCleared": "modified",
  },
  "generators/workspaces/templates/template-file-workspaces.ejs": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "tsconfig.json": {
    "stateCleared": "modified",
  },
  "vitest.config.ts": {
    "stateCleared": "modified",
  },
  "vitest.test-setup.ts": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - generate-blueprint with default config should match application snapshot 1`] = `
{
  "additionalSubGenerators": "",
  "artifactoryReleasesId": "releases",
  "artifactoryReleasesUrl": "http://artifactory:8081/artifactory/libs-release",
  "artifactorySnapshotsId": "snapshots",
  "artifactorySnapshotsUrl": "http://artifactory:8081/artifactory/libs-snapshot",
  "backendType": "Java",
  "backendTypeJavaAny": true,
  "backendTypeSpringBoot": true,
  "baseName": "jhipster",
  "blueprintCliName": "cli.cts",
  "blueprintMjsExtension": "js",
  "blueprintsPath": "generators/",
  "buildTool": "maven",
  "buildToolAny": true,
  "buildToolGradle": false,
  "buildToolMaven": true,
  "camelizedBaseName": "jhipster",
  "capitalizedBaseName": "Jhipster",
  "caret": undefined,
  "ciCd": undefined,
  "ciCdAzure": false,
  "ciCdCircle": false,
  "ciCdGithub": false,
  "ciCdGitlab": false,
  "ciCdIntegrations": [],
  "ciCdIntegrationsCypressDashboard": false,
  "ciCdIntegrationsDeploy": false,
  "ciCdIntegrationsHeroku": false,
  "ciCdIntegrationsPublishDocker": false,
  "ciCdIntegrationsSnyk": false,
  "ciCdIntegrationsSonar": false,
  "ciCdJenkins": false,
  "ciCdTravis": false,
  "cli": true,
  "cliName": "jhipster-jhipster",
  "clientDistDir": "dist/",
  "clientPackageJsonScripts": {},
  "clientRootDir": "",
  "clientSrcDir": "src/main/webapp/",
  "clientTestDir": "src/test/javascript/",
  "commandName": "generate-blueprint",
  "commands": [],
  "creationTimestamp": 1577836800000,
  "customizeTemplatePaths": [],
  "dasherizedBaseName": "jhipster",
  "defaultCommand": "generate-blueprint",
  "dockerImage": undefined,
  "documentationArchiveUrl": "https://www.jhipster.tech/documentation-archive/vJHIPSTER_VERSION",
  "dynamic": false,
  "gitDependency": undefined,
  "githubActions": {
    "actions/checkout": "actions/checkout@VERSION",
    "actions/setup-java": "actions/setup-java@VERSION",
    "actions/setup-node": "actions/setup-node@VERSION",
    "actions/upload-artifact": "actions/upload-artifact@VERSION",
    "jhipster/actions/cache-npm-dependencies": "jhipster/actions/cache-npm-dependencies@VERSION",
    "jhipster/actions/compare-sample": "jhipster/actions/compare-sample@VERSION",
    "jhipster/actions/restore-cache": "jhipster/actions/restore-cache@VERSION",
    "jhipster/actions/save-cache": "jhipster/actions/save-cache@VERSION",
    "jhipster/actions/setup-runner": "jhipster/actions/setup-runner@VERSION",
    "jwalton/gh-docker-logs": "jwalton/gh-docker-logs@VERSION",
  },
  "githubRepository": "jhipster/generator-jhipster-jhipster",
  "githubWorkflows": undefined,
  "herokuAppName": "jhipster",
  "hipster": "jhipster_family_member_3",
  "hipsterBugTrackerLink": "https://github.com/jhipster/generator-jhipster/issues?state=open",
  "hipsterBugTrackerProductName": "JHipster",
  "hipsterChatLink": "https://gitter.im/jhipster/generator-jhipster",
  "hipsterChatProductName": "JHipster",
  "hipsterDocumentationLink": "https://www.jhipster.tech/",
  "hipsterHomePageProductName": "JHipster",
  "hipsterName": "Java Hipster",
  "hipsterProductName": "JHipster",
  "hipsterProjectLink": "https://github.com/jhipster/generator-jhipster",
  "hipsterStackOverflowProductName": "JHipster",
  "hipsterStackoverflowLink": "https://stackoverflow.com/tags/jhipster/info",
  "hipsterTwitterLink": "https://twitter.com/jhipster",
  "hipsterTwitterUsername": "@jhipster",
  "humanizedBaseName": "JHipster",
  "ignoreExistingGenerators": undefined,
  "insideDocker": undefined,
  "javascriptBlueprint": false,
  "jhiPrefix": "jhi",
  "jhiPrefixCapitalized": "Jhi",
  "jhiPrefixDashed": "jhi",
  "jhipsterPackageJson": Any<Object>,
  "jhipsterVersion": "JHIPSTER_VERSION",
  "js": true,
  "localBlueprint": false,
  "lowercaseBaseName": "jhipster",
  "monorepository": undefined,
  "nodeDependencies": {
    "concurrently": "CONCURRENTLY_VERSION",
    "eslint-config-prettier": "ESLINT_CONFIG_PRETTIER_VERSION",
    "eslint-plugin-prettier": "ESLINT_PLUGIN_PRETTIER_VERSION",
    "husky": "HUSKY_VERSION",
    "lint-staged": "LINT_STAGED_VERSION",
    "npm": "NPM_VERSION",
    "prettier": "PRETTIER_VERSION",
    "prettier-plugin-java": "PRETTIER_PLUGIN_JAVA_VERSION",
    "prettier-plugin-packagejson": "PRETTIER_PLUGIN_PACKAGEJSON_VERSION",
    "wait-on": "WAIT_ON_VERSION",
  },
  "nodePackageManager": "npm",
  "nodePackageManagerCommand": "npm",
  "nodeVersion": "NODE_VERSION",
  "packageJsonNodeEngine": undefined,
  "packageJsonScripts": {},
  "prettierExtensions": [
    "md",
    "json",
    "yml",
    "js",
    "cjs",
    "mjs",
    "ts",
    "cts",
    "mts",
  ],
  "prettierFolders": [
    "",
    ".blueprint/**/",
  ],
  "prettierTabWidth": 2,
  "projectDescription": "Description for JHipster",
  "sampleWritten": undefined,
  "sendBuildToGitlab": undefined,
  "skipCommitHook": undefined,
  "skipJhipsterDependencies": undefined,
  "skipWorkflows": undefined,
  "sonarName": "sonar",
  "sonarOrga": undefined,
  "sonarUrl": "https://sonarcloud.io",
  "subGenerators": [],
  "temporaryDir": "temp/",
  "typescriptEslint": true,
  "upperFirstCamelCaseBaseName": "Jhipster",
}
`;

exports[`generator - generate-blueprint with default config should write files and match snapshot 1`] = `
{
  ".blueprint/cli/commands.ts": {
    "stateCleared": "modified",
  },
  ".blueprint/generate-sample/command.ts": {
    "stateCleared": "modified",
  },
  ".blueprint/generate-sample/generator.ts": {
    "stateCleared": "modified",
  },
  ".blueprint/generate-sample/index.ts": {
    "stateCleared": "modified",
  },
  ".blueprint/generate-sample/templates/samples/sample.jdl": {
    "stateCleared": "modified",
  },
  ".github/workflows/generator.yml": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "README.md": {
    "stateCleared": "modified",
  },
  "cli/cli-customizations.cts": {
    "stateCleared": "modified",
  },
  "cli/cli.cts": {
    "stateCleared": "modified",
  },
  "generators/base-generator.ts": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "tsconfig.json": {
    "stateCleared": "modified",
  },
  "vitest.config.ts": {
    "stateCleared": "modified",
  },
  "vitest.test-setup.ts": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - generate-blueprint with local-blueprint option and app generator should match application snapshot 1`] = `
{
  "additionalSubGenerators": "",
  "artifactoryReleasesId": "releases",
  "artifactoryReleasesUrl": "http://artifactory:8081/artifactory/libs-release",
  "artifactorySnapshotsId": "snapshots",
  "artifactorySnapshotsUrl": "http://artifactory:8081/artifactory/libs-snapshot",
  "backendType": "Java",
  "backendTypeJavaAny": true,
  "backendTypeSpringBoot": true,
  "baseName": "jhipster",
  "blueprintMjsExtension": "mjs",
  "blueprintsPath": ".blueprint/",
  "buildTool": "maven",
  "buildToolAny": true,
  "buildToolGradle": false,
  "buildToolMaven": true,
  "camelizedBaseName": "jhipster",
  "capitalizedBaseName": "Jhipster",
  "caret": undefined,
  "ciCd": undefined,
  "ciCdAzure": false,
  "ciCdCircle": false,
  "ciCdGithub": false,
  "ciCdGitlab": false,
  "ciCdIntegrations": [],
  "ciCdIntegrationsCypressDashboard": false,
  "ciCdIntegrationsDeploy": false,
  "ciCdIntegrationsHeroku": false,
  "ciCdIntegrationsPublishDocker": false,
  "ciCdIntegrationsSnyk": false,
  "ciCdIntegrationsSonar": false,
  "ciCdJenkins": false,
  "ciCdTravis": false,
  "cli": true,
  "cliName": "jhipster-jhipster",
  "clientDistDir": "dist/",
  "clientPackageJsonScripts": {},
  "clientRootDir": "",
  "clientSrcDir": "src/main/webapp/",
  "clientTestDir": "src/test/javascript/",
  "commandName": "generate-blueprint",
  "commands": [],
  "creationTimestamp": undefined,
  "customizeTemplatePaths": [],
  "dasherizedBaseName": "jhipster",
  "dockerImage": undefined,
  "documentationArchiveUrl": "https://www.jhipster.tech/documentation-archive/vJHIPSTER_VERSION",
  "dynamic": true,
  "generators": {
    "app": {
      "priorities": [
        "initializing",
        "prompting",
        "configuring",
        "composing",
        "composingComponent",
        "loading",
        "preparing",
        "postPreparing",
        "default",
        "writing",
        "multistepTransform",
        "postWriting",
        "transform",
        "install",
        "postInstall",
        "end",
      ],
      "sbs": true,
    },
  },
  "gitDependency": undefined,
  "githubActions": {
    "actions/checkout": "actions/checkout@VERSION",
    "actions/setup-java": "actions/setup-java@VERSION",
    "actions/setup-node": "actions/setup-node@VERSION",
    "actions/upload-artifact": "actions/upload-artifact@VERSION",
    "jhipster/actions/cache-npm-dependencies": "jhipster/actions/cache-npm-dependencies@VERSION",
    "jhipster/actions/compare-sample": "jhipster/actions/compare-sample@VERSION",
    "jhipster/actions/restore-cache": "jhipster/actions/restore-cache@VERSION",
    "jhipster/actions/save-cache": "jhipster/actions/save-cache@VERSION",
    "jhipster/actions/setup-runner": "jhipster/actions/setup-runner@VERSION",
    "jwalton/gh-docker-logs": "jwalton/gh-docker-logs@VERSION",
  },
  "githubRepository": "jhipster/generator-jhipster-jhipster",
  "githubWorkflows": undefined,
  "herokuAppName": "jhipster",
  "hipster": "jhipster_family_member_3",
  "hipsterBugTrackerLink": "https://github.com/jhipster/generator-jhipster/issues?state=open",
  "hipsterBugTrackerProductName": "JHipster",
  "hipsterChatLink": "https://gitter.im/jhipster/generator-jhipster",
  "hipsterChatProductName": "JHipster",
  "hipsterDocumentationLink": "https://www.jhipster.tech/",
  "hipsterHomePageProductName": "JHipster",
  "hipsterName": "Java Hipster",
  "hipsterProductName": "JHipster",
  "hipsterProjectLink": "https://github.com/jhipster/generator-jhipster",
  "hipsterStackOverflowProductName": "JHipster",
  "hipsterStackoverflowLink": "https://stackoverflow.com/tags/jhipster/info",
  "hipsterTwitterLink": "https://twitter.com/jhipster",
  "hipsterTwitterUsername": "@jhipster",
  "humanizedBaseName": "JHipster",
  "ignoreExistingGenerators": undefined,
  "insideDocker": undefined,
  "javascriptBlueprint": false,
  "jhiPrefix": "jhi",
  "jhiPrefixCapitalized": "Jhi",
  "jhiPrefixDashed": "jhi",
  "jhipsterPackageJson": Any<Object>,
  "jhipsterVersion": "JHIPSTER_VERSION",
  "js": false,
  "localBlueprint": true,
  "lowercaseBaseName": "jhipster",
  "monorepository": undefined,
  "nodeDependencies": {
    "concurrently": "CONCURRENTLY_VERSION",
    "eslint-config-prettier": "ESLINT_CONFIG_PRETTIER_VERSION",
    "eslint-plugin-prettier": "ESLINT_PLUGIN_PRETTIER_VERSION",
    "husky": "HUSKY_VERSION",
    "lint-staged": "LINT_STAGED_VERSION",
    "npm": "NPM_VERSION",
    "prettier": "PRETTIER_VERSION",
    "prettier-plugin-java": "PRETTIER_PLUGIN_JAVA_VERSION",
    "prettier-plugin-packagejson": "PRETTIER_PLUGIN_PACKAGEJSON_VERSION",
    "wait-on": "WAIT_ON_VERSION",
  },
  "nodePackageManager": "npm",
  "nodePackageManagerCommand": "npm",
  "nodeVersion": "NODE_VERSION",
  "packageJsonNodeEngine": undefined,
  "packageJsonScripts": {},
  "prettierExtensions": [
    "md",
    "json",
    "yml",
    "js",
    "cjs",
    "mjs",
    "ts",
    "cts",
    "mts",
  ],
  "prettierFolders": [
    "",
    ".blueprint/**/",
  ],
  "prettierTabWidth": 2,
  "projectDescription": "Description for JHipster",
  "sampleWritten": undefined,
  "sendBuildToGitlab": undefined,
  "skipCommitHook": undefined,
  "skipJhipsterDependencies": undefined,
  "skipWorkflows": undefined,
  "sonarName": "sonar",
  "sonarOrga": undefined,
  "sonarUrl": "https://sonarcloud.io",
  "subGenerators": [
    "app",
  ],
  "temporaryDir": "temp/",
  "typescriptEslint": true,
  "upperFirstCamelCaseBaseName": "Jhipster",
}
`;

exports[`generator - generate-blueprint with local-blueprint option should match application snapshot 1`] = `
{
  "additionalSubGenerators": "",
  "artifactoryReleasesId": "releases",
  "artifactoryReleasesUrl": "http://artifactory:8081/artifactory/libs-release",
  "artifactorySnapshotsId": "snapshots",
  "artifactorySnapshotsUrl": "http://artifactory:8081/artifactory/libs-snapshot",
  "backendType": "Java",
  "backendTypeJavaAny": true,
  "backendTypeSpringBoot": true,
  "baseName": "jhipster",
  "blueprintMjsExtension": "mjs",
  "blueprintsPath": ".blueprint/",
  "buildTool": "maven",
  "buildToolAny": true,
  "buildToolGradle": false,
  "buildToolMaven": true,
  "camelizedBaseName": "jhipster",
  "capitalizedBaseName": "Jhipster",
  "caret": undefined,
  "ciCd": undefined,
  "ciCdAzure": false,
  "ciCdCircle": false,
  "ciCdGithub": false,
  "ciCdGitlab": false,
  "ciCdIntegrations": [],
  "ciCdIntegrationsCypressDashboard": false,
  "ciCdIntegrationsDeploy": false,
  "ciCdIntegrationsHeroku": false,
  "ciCdIntegrationsPublishDocker": false,
  "ciCdIntegrationsSnyk": false,
  "ciCdIntegrationsSonar": false,
  "ciCdJenkins": false,
  "ciCdTravis": false,
  "cli": true,
  "cliName": "jhipster-jhipster",
  "clientDistDir": "dist/",
  "clientPackageJsonScripts": {},
  "clientRootDir": "",
  "clientSrcDir": "src/main/webapp/",
  "clientTestDir": "src/test/javascript/",
  "commandName": "generate-blueprint",
  "commands": [],
  "creationTimestamp": undefined,
  "customizeTemplatePaths": [],
  "dasherizedBaseName": "jhipster",
  "dockerImage": undefined,
  "documentationArchiveUrl": "https://www.jhipster.tech/documentation-archive/vJHIPSTER_VERSION",
  "dynamic": true,
  "gitDependency": undefined,
  "githubActions": {
    "actions/checkout": "actions/checkout@VERSION",
    "actions/setup-java": "actions/setup-java@VERSION",
    "actions/setup-node": "actions/setup-node@VERSION",
    "actions/upload-artifact": "actions/upload-artifact@VERSION",
    "jhipster/actions/cache-npm-dependencies": "jhipster/actions/cache-npm-dependencies@VERSION",
    "jhipster/actions/compare-sample": "jhipster/actions/compare-sample@VERSION",
    "jhipster/actions/restore-cache": "jhipster/actions/restore-cache@VERSION",
    "jhipster/actions/save-cache": "jhipster/actions/save-cache@VERSION",
    "jhipster/actions/setup-runner": "jhipster/actions/setup-runner@VERSION",
    "jwalton/gh-docker-logs": "jwalton/gh-docker-logs@VERSION",
  },
  "githubRepository": "jhipster/generator-jhipster-jhipster",
  "githubWorkflows": undefined,
  "herokuAppName": "jhipster",
  "hipster": "jhipster_family_member_3",
  "hipsterBugTrackerLink": "https://github.com/jhipster/generator-jhipster/issues?state=open",
  "hipsterBugTrackerProductName": "JHipster",
  "hipsterChatLink": "https://gitter.im/jhipster/generator-jhipster",
  "hipsterChatProductName": "JHipster",
  "hipsterDocumentationLink": "https://www.jhipster.tech/",
  "hipsterHomePageProductName": "JHipster",
  "hipsterName": "Java Hipster",
  "hipsterProductName": "JHipster",
  "hipsterProjectLink": "https://github.com/jhipster/generator-jhipster",
  "hipsterStackOverflowProductName": "JHipster",
  "hipsterStackoverflowLink": "https://stackoverflow.com/tags/jhipster/info",
  "hipsterTwitterLink": "https://twitter.com/jhipster",
  "hipsterTwitterUsername": "@jhipster",
  "humanizedBaseName": "JHipster",
  "ignoreExistingGenerators": undefined,
  "insideDocker": undefined,
  "javascriptBlueprint": false,
  "jhiPrefix": "jhi",
  "jhiPrefixCapitalized": "Jhi",
  "jhiPrefixDashed": "jhi",
  "jhipsterPackageJson": Any<Object>,
  "jhipsterVersion": "JHIPSTER_VERSION",
  "js": false,
  "localBlueprint": true,
  "lowercaseBaseName": "jhipster",
  "monorepository": undefined,
  "nodeDependencies": {
    "concurrently": "CONCURRENTLY_VERSION",
    "eslint-config-prettier": "ESLINT_CONFIG_PRETTIER_VERSION",
    "eslint-plugin-prettier": "ESLINT_PLUGIN_PRETTIER_VERSION",
    "husky": "HUSKY_VERSION",
    "lint-staged": "LINT_STAGED_VERSION",
    "npm": "NPM_VERSION",
    "prettier": "PRETTIER_VERSION",
    "prettier-plugin-java": "PRETTIER_PLUGIN_JAVA_VERSION",
    "prettier-plugin-packagejson": "PRETTIER_PLUGIN_PACKAGEJSON_VERSION",
    "wait-on": "WAIT_ON_VERSION",
  },
  "nodePackageManager": "npm",
  "nodePackageManagerCommand": "npm",
  "nodeVersion": "NODE_VERSION",
  "packageJsonNodeEngine": undefined,
  "packageJsonScripts": {},
  "prettierExtensions": [
    "md",
    "json",
    "yml",
    "js",
    "cjs",
    "mjs",
    "ts",
    "cts",
    "mts",
  ],
  "prettierFolders": [
    "",
    ".blueprint/**/",
  ],
  "prettierTabWidth": 2,
  "projectDescription": "Description for JHipster",
  "sampleWritten": undefined,
  "sendBuildToGitlab": undefined,
  "skipCommitHook": undefined,
  "skipJhipsterDependencies": undefined,
  "skipWorkflows": undefined,
  "sonarName": "sonar",
  "sonarOrga": undefined,
  "sonarUrl": "https://sonarcloud.io",
  "subGenerators": [],
  "temporaryDir": "temp/",
  "typescriptEslint": true,
  "upperFirstCamelCaseBaseName": "Jhipster",
}
`;
